--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <title>This is my website</title>
   <h1>Welcome to first page of site</h1>
+  <p>Some new things coming up</p>
 </html>
   
