--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <title>This is my website</title>
   <h1>Welcome to first page of site</h1>
   <p>Some new things coming up</p>
+  <p>Are you excited?</p>
 </html>
   
